--- a/OnlineLaundry/OnlineLaundry.csproj
+++ b/OnlineLaundry/OnlineLaundry.csproj
@@ -47,10 +47,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -126,10 +134,58 @@
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="customer.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="customer_subscription.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="OnlineLaundry.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OnlineLaundry.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OnlineLaundry.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OnlineLaundry.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>OnlineLaundry.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="order.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="order_detail.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="payroll.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="service.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="service_pieces.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="service_subscription.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="service_weight.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="staff.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
+    <Compile Include="working_report.cs">
+      <DependentUpon>OnlineLaundry.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin\css\login_main.css" />
@@ -145,6 +201,16 @@
     <Content Include="Content\admin\img\icons\map-marker.png" />
     <Content Include="Content\admin\img\icons\symbol-01.png" />
     <Content Include="Content\admin\img\undraw_posting_photo.svg" />
+    <Content Include="OnlineLaundry.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>OnlineLaundry.Context.cs</LastGenOutput>
+      <DependentUpon>OnlineLaundry.edmx</DependentUpon>
+    </Content>
+    <Content Include="OnlineLaundry.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>OnlineLaundry.edmx</DependentUpon>
+      <LastGenOutput>OnlineLaundry.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\admin\js\main.js" />
     <Content Include="Content\animate.min.css" />
     <Content Include="Content\animated-headline.css" />
@@ -338,7 +404,9 @@
     <Content Include="Content\fonts\themify.ttf" />
     <Content Include="Content\fonts\themify.woff" />
     <Content Include="Content\fonts\_flaticon.scss" />
-    <Content Include="Areas\Admin\Views\Dashboard\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Dashboard\Index.cshtml">
+      <CustomToolNamespace>OnlineLaundry</CustomToolNamespace>
+    </Content>
     <Content Include="Areas\Admin\Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Content\admin\fonts\Linearicons-Free-v1.0.0\WebFont\Linearicons-Free.eot" />
@@ -390,6 +458,13 @@
     <Content Include="Content\admin\fonts\ubuntu\Ubuntu-MediumItalic.ttf" />
     <Content Include="Content\admin\fonts\ubuntu\Ubuntu-Regular.ttf" />
     <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
+    <EntityDeploy Include="OnlineLaundry.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>OnlineLaundry.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="OnlineLaundry.edmx.diagram">
+      <DependentUpon>OnlineLaundry.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -2236,6 +2311,7 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
