Add admin login backend

--- a/OnlineLaundry/OnlineLaundry.csproj
+++ b/OnlineLaundry/OnlineLaundry.csproj
@@ -132,7 +132,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\DashboardController.cs" />
-    <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AccountController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LoginRequiredController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="customer.cs">
       <DependentUpon>OnlineLaundry.tt</DependentUpon>
@@ -143,6 +144,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="KeyStorage.cs" />
     <Compile Include="OnlineLaundry.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -457,7 +459,6 @@
     <Content Include="Content\admin\fonts\ubuntu\Ubuntu-Medium.ttf" />
     <Content Include="Content\admin\fonts\ubuntu\Ubuntu-MediumItalic.ttf" />
     <Content Include="Content\admin\fonts\ubuntu\Ubuntu-Regular.ttf" />
-    <Content Include="Areas\Admin\Views\Login\Index.cshtml" />
     <EntityDeploy Include="OnlineLaundry.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>OnlineLaundry.Designer.cs</LastGenOutput>
@@ -465,6 +466,7 @@
     <Content Include="OnlineLaundry.edmx.diagram">
       <DependentUpon>OnlineLaundry.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Admin\Views\Account\Login.cshtml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -2300,6 +2302,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Views\LoginRequired\" />
     <Folder Include="Content\admin\js\" />
     <Folder Include="Models\" />
   </ItemGroup>
