--- a/OnlineLaundry/Web.config
+++ b/OnlineLaundry/Web.config
@@ -15,7 +15,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Admin/Account/Login" defaultUrl="~/" timeout="20" slidingExpiration="true"></forms>
+	  </authentication>
+	  <roleManager defaultProvider="UserRoleProvider" enabled="true">
+		  <providers>
+			  <clear/>
+			  <add name="UserRoleProvider" type="OnlineLaundry.Models.UserRoleProvider"/>
+		  </providers>
+	  </roleManager>
+	  <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
