--- a/OnlineLaundry/Web.config
+++ b/OnlineLaundry/Web.config
@@ -15,16 +15,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-	  <authentication mode="Forms">
-		  <forms loginUrl="~/Admin/Account/Login" defaultUrl="~/" timeout="20" slidingExpiration="true"></forms>
-	  </authentication>
-	  <roleManager defaultProvider="UserRoleProvider" enabled="true">
-		  <providers>
-			  <clear/>
-			  <add name="UserRoleProvider" type="OnlineLaundry.Models.UserRoleProvider"/>
-		  </providers>
-	  </roleManager>
-	  <compilation debug="true" targetFramework="4.7.2" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Admin/Account/Login" defaultUrl="~/" timeout="20" slidingExpiration="true"></forms>
+    </authentication>
+    <roleManager defaultProvider="UserRoleProvider" enabled="true">
+      <providers>
+        <clear />
+        <add name="UserRoleProvider" type="OnlineLaundry.Models.UserRoleProvider" />
+      </providers>
+    </roleManager>
+    <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
@@ -66,7 +66,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="OnlineLaundryEntities" connectionString="metadata=res://*/OnlineLaundry.csdl|res://*/OnlineLaundry.ssdl|res://*/OnlineLaundry.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OnlineLaundry.mssql.somee.com;initial catalog=OnlineLaundry;persist security info=True;user id=phucaptech_SQLLogin_1;password=onlinelaundry@aptech;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OnlineLaundryEntities" connectionString="metadata=res://*/Models.OnlineLaundryModels.csdl|res://*/Models.OnlineLaundryModels.ssdl|res://*/Models.OnlineLaundryModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=OnlineLaundry.mssql.somee.com;initial catalog=OnlineLaundry;persist security info=True;user id=phucaptech_SQLLogin_1;password=onlinelaundry@aptech;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
